--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ serde_json = "1.0.145"
 sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "chrono", "uuid", "macros", "bit-vec"] }
 serde = { version = "1.0.228", features = ["derive"] }
 tokio = { version = "1.47.1", features = ["full"] }
+strum = "0.27.2"
+strum_macros = "0.27.2"
