--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ serde = { version = "1.0.228", features = ["derive"] }
 tokio = { version = "1.47.1", features = ["full"] }
 strum = "0.27.2"
 strum_macros = "0.27.2"
+chrono = { version = "0.4.42", features = ["serde"] }
