--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ tokio = { version = "1.47.1", features = ["full"] }
 strum = "0.27.2"
 strum_macros = "0.27.2"
 chrono = { version = "0.4.42", features = ["serde"] }
+thiserror = "2.0.17"
+env_logger = "0.11.8"
