--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ strum_macros = "0.27.2"
 chrono = { version = "0.4.42", features = ["serde"] }
 thiserror = "2.0.17"
 env_logger = "0.11.8"
+futures = "0.3.31"
