--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ chrono = { version = "0.4.42", features = ["serde"] }
 thiserror = "2.0.17"
 env_logger = "0.11.8"
 futures = "0.3.31"
+log = "0.4.28"
